# ClinPGxTermNorm

./: .gitignore  README.md  pixi.toml  pyproject.toml
lookup_data/chemicals/: chemicals.csv  chemicals.pkl  chemicals.tsv
lookup_data/drugs/: CREATED_2025-08-05.txt  _name_index.pkl  drugs.tsv
lookup_data/genes/: CREATED_2025-08-05.txt  _name_index.pkl
lookup_data/phenotypes/: CREATED_2025-08-05.txt  _name_index.pkl  phenotypes.tsv
lookup_data/variants/: CREATED_2025-08-05.txt  variants.tsv
notebooks/: star_allele.ipynb
src/clinpgx_lookup/: __init__.py  chemical_search.py  drug_search.py  gene_search.py  phenotype_search.py  search_utils.py  term_lookup.py  variant_search.py
src/clinpgx_term_lookup/: __init__.py  term_lookup.py  variant_search.py
tests/: test_drug_search.py  test_gene_search.py  test_normalize.py  test_variant_search.py
